--- a/html/sass/_menu.sass
+++ b/html/sass/_menu.sass
@@ -35,3 +35,28 @@
 
   a
     margin-right: 15px
+
+#mobile-menu
+  display: none
+  background: #000
+  color: #fff
+  padding: 20px
+  border-top: 1px solid #ededed
+  z-index: 10
+  position: absolute
+  right: 0
+  width: 200px
+  ul
+    li
+      margin-bottom: 20px
+      a
+        font-size: 20px
+        text-decoration: none
+        text-transform: uppercase
+        color: #fff
+#mobile-toggle
+  text-decoration: none
+  color: #ffffff
+  font-size: 30px
+  display: none
+
