--- a/html/css/main.css
+++ b/html/css/main.css
@@ -305,18 +305,6 @@ h4 {
     .breadcrumbs ul li:last-child:after {
       content: ''; }
 
-#mobile-menu {
-  display: none;
-  background: #000;
-  color: #fff;
-  padding: 20px; }
-
-#mobile-toggle {
-  text-decoration: none;
-  color: #ffffff;
-  font-size: 30px;
-  display: none; }
-
 .btn {
   text-decoration: none;
   text-transform: uppercase;
@@ -403,7 +391,8 @@ h4 {
         background: #f66059; }
 
 .slider {
-  max-height: 495px; }
+  max-height: 495px;
+  background: #ededed; }
 
 .about-main {
   padding: 50px 0 100px 0;
@@ -496,6 +485,30 @@ h4 {
           align-items: center; }
   .top-menu-buttons a {
     margin-right: 15px; }
+
+#mobile-menu {
+  display: none;
+  background: #000;
+  color: #fff;
+  padding: 20px;
+  border-top: 1px solid #ededed;
+  z-index: 10;
+  position: absolute;
+  right: 0;
+  width: 200px; }
+  #mobile-menu ul li {
+    margin-bottom: 20px; }
+    #mobile-menu ul li a {
+      font-size: 20px;
+      text-decoration: none;
+      text-transform: uppercase;
+      color: #fff; }
+
+#mobile-toggle {
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 30px;
+  display: none; }
 
 .map {
   background: url("../img/map.jpg");
@@ -607,6 +620,14 @@ footer {
       text-decoration: none;
       color: #000000; }
 
+@media screen and (max-width: 1270px) {
+  .header {
+    grid-template-columns: 2fr 1fr 1fr; } }
+
+@media screen and (max-width: 840px) {
+  .top-menu ul li a {
+    font-size: 14px; } }
+
 @media screen and (max-width: 768px) {
   .header {
     grid-template-columns: 1fr 1fr; }
@@ -614,3 +635,66 @@ footer {
     display: block; }
   .top-menu {
     display: none; } }
+
+@media screen and (max-width: 425px) {
+  #mobile-menu {
+    width: 385px; }
+  .slider {
+    display: none; }
+  .header {
+    grid-template-columns: 1fr 2fr; }
+  .logo span {
+    display: none; }
+  .footer {
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: center; }
+    .footer p {
+      font-size: 14px; }
+  .close {
+    top: 0px;
+    left: 90%; }
+  .modal {
+    overflow: auto; }
+  .modal-content {
+    height: auto; }
+  .portfolio-item-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .portfolio-item-image {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1; }
+  .portfolio-item-preview {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2; }
+  .portfolio-item-description {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3; }
+  .breadcrumbs li {
+    font-size: 12px !important; }
+    .breadcrumbs li a {
+      font-size: 12px; } }
+
+@media screen and (max-width: 375px) {
+  #mobile-menu {
+    width: 335px; } }
+
+@media screen and (max-width: 320px) {
+  #mobile-menu {
+    width: 280px; }
+  .top-menu-buttons {
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline; }
+  #mobile-toggle {
+    font-size: 25px; } }
