--- a/html/sass/_menu.sass
+++ b/html/sass/_menu.sass
@@ -7,6 +7,9 @@
 
 .logo
   text-align: center
+  img
+    display: block
+    margin: 0 auto
   p
     font-family: Appetite,sans-serif
     font-size: 30px
