--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="footer">
             <div>
-                <p>© 1999–2017 швейное производство Ависпа</p>
+                <p>© 1999–2019 <span id="footer_text">швейное производство Ависпа</span></p>
                 <p><a class="color-pink" href="mailto:">hello@avispa.ru</a></p>
                 <p><a href="#">Карта сайта</a></p>
             </div>
