--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,7 @@
         </nav>
 
         <div class="logo">
-            <p>Avispa</p>
+            <img src="img/logo.jpg" alt="Швейное производство в Санкт-Петербурге">
             <span>Швейное производство в Санкт-Петербурге</span>
         </div>
         <div class="top-menu-buttons">
