--- a/html/sass/_mobile.sass
+++ b/html/sass/_mobile.sass
@@ -22,6 +22,8 @@
     display: none
 
 @media screen and  (max-width: 530px)
+  .mb40
+    margin-bottom: 20px !important
 
   .footer
     p
@@ -49,7 +51,7 @@
   .modal
     overflow: auto
   .modal-content
-    height: auto
+    height: inherit
   .portfolio-item-info
     display: flex
     flex-direction: column
