--- a/static/css/main.css
+++ b/static/css/main.css
@@ -644,6 +644,8 @@ footer {
     display: none; } }
 
 @media screen and (max-width: 530px) {
+  .mb40 {
+    margin-bottom: 20px !important; }
   .footer p {
     margin-bottom: 10px; }
   #footer_text {
@@ -667,7 +669,7 @@ footer {
   .modal {
     overflow: auto; }
   .modal-content {
-    height: auto; }
+    height: inherit; }
   .portfolio-item-info {
     display: -webkit-box;
     display: -ms-flexbox;
