--- a/templates/category.html
+++ b/templates/category.html
@@ -11,7 +11,7 @@
                     <li>{{ category.name }}</li>
                 </ul>
             </div>
-            <h1 class="mb30">Куртки</h1>
+            <h1 class="mb30">{{ category.name }}</h1>
             <div class="portfolio-items">
                 {% for item in items %}
                     <div class="portfolio-item">
