--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -3,6 +3,7 @@
 
 {% block content %}
  <section class="map">
+ <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af23411efd9c9fdfaee6c2ebe0679d056053b24e8835ed81426b0f7568d094f40&amp;width=100%25&amp;height=463&amp;lang=ru_RU&amp;scroll=true"></script>
 
 </section>
 <section class="contact-main">
