--- a/html/sass/_common.sass
+++ b/html/sass/_common.sass
@@ -172,3 +172,14 @@ h4
 
   h3
     margin: 50px 0 30px 0
+
+.admin-edit:hover
+  border: 1px solid red
+  padding: 10px
+  cursor: pointer
+.admin-edit:hover:after
+  content: 'Редактировать'
+  background: red
+  color: white
+  position: relative
+  bottom: -29px
