--- a/static/css/main.css
+++ b/static/css/main.css
@@ -730,3 +730,37 @@ footer {
             align-items: end; }
   #mobile-toggle {
     font-size: 25px; } }
+
+
+.editModal
+  {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 5%;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4); }
+
+.editmodal-content{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  background: #ffffff;
+  max-width: 50%;
+  /* height: 100%; */
+  text-align: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  /* padding: 0 15px; */
+  margin: 0 auto;
+}
