--- a/templates/basic.html
+++ b/templates/basic.html
@@ -21,7 +21,11 @@
 
 {% block js %}
 {% endblock %}
-
 <script src="{% static 'js/main.js' %}"></script>
+{% if user.is_authenticated %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js" type="text/javascript"></script>
+<script src="https://cdn.ckeditor.com/4.12.1/full/ckeditor.js"></script>
+<script src="{% static 'js/admin.js' %}"></script>
+{% endif %}
 </body>
 </html>
