--- a/templates/services.html
+++ b/templates/services.html
@@ -118,7 +118,7 @@
               text.innerHTML =  CKEDITOR.instances.text.getData()
             }else{
                 id='0'
-                let header = document.getElementById('header')
+                header = document.getElementById('header')
 
             }
             editmodal.style.display = "none";
